commit (#19.5) some fixes